--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,3 +12,10 @@ $gutter: 1rem; //for primeflex grid system
 @import "assets/demo/styles/flags/flags.css";
 @import "assets/demo/styles/badges.scss";
 @import "assets/demo/styles/code.scss";
+
+
+.p-button-rounded{
+    width: 30px;
+    height: 30px;
+    margin:5px;
+}
